--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/s3-request-presigner": "^3.27.0",
     "@vendia/serverless-express": "^4.3.9",
     "aws-lambda": "^1.0.6",
+    "aws-xray-sdk": "^3.3.3",
     "cors": "^2.8.5",
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
