--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Build
+      - name: Release
         run: |
           npm ci
           npm run release
