--- a/package.json
+++ b/package.json
@@ -36,15 +36,16 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@aws-cdk/aws-apigatewayv2": "^1.122.0",
-    "@aws-cdk/aws-apigatewayv2-integrations": "^1.122.0",
+    "@aws-cdk/aws-apigateway": "^1.122.0",
     "@aws-cdk/aws-certificatemanager": "^1.122.0",
     "@aws-cdk/aws-dynamodb": "^1.122.0",
     "@aws-cdk/aws-iam": "^1.122.0",
     "@aws-cdk/aws-lambda": "^1.122.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.122.0",
     "@aws-cdk/aws-route53": "^1.122.0",
     "@aws-cdk/aws-route53-targets": "^1.122.0",
     "@aws-cdk/aws-s3": "^1.122.0",
+    "@aws-cdk/aws-sqs": "^1.122.0",
     "@aws-cdk/aws-ssm": "^1.122.0",
     "@aws-cdk/core": "^1.122.0",
     "@types/cors": "^2.8.12",
