--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "destroy": "cdk destroy --profile movement-pass"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.36.1",
-    "@aws-sdk/client-s3": "^3.36.1",
-    "@aws-sdk/client-ssm": "^3.36.1",
-    "@aws-sdk/lib-dynamodb": "^3.36.1",
-    "@aws-sdk/s3-request-presigner": "^3.36.1",
+    "@aws-sdk/client-dynamodb": "^3.37.0",
+    "@aws-sdk/client-s3": "^3.37.0",
+    "@aws-sdk/client-ssm": "^3.37.0",
+    "@aws-sdk/lib-dynamodb": "^3.37.0",
+    "@aws-sdk/s3-request-presigner": "^3.37.0",
     "@vendia/serverless-express": "^4.5.1",
     "aws-lambda": "^1.0.6",
     "aws-xray-sdk": "^3.3.3",
@@ -36,36 +36,36 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@aws-cdk/aws-apigateway": "^1.128.0",
-    "@aws-cdk/aws-certificatemanager": "^1.128.0",
-    "@aws-cdk/aws-dynamodb": "^1.128.0",
-    "@aws-cdk/aws-iam": "^1.128.0",
-    "@aws-cdk/aws-kinesis": "^1.128.0",
-    "@aws-cdk/aws-lambda": "^1.128.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.128.0",
-    "@aws-cdk/aws-route53": "^1.128.0",
-    "@aws-cdk/aws-route53-targets": "^1.128.0",
-    "@aws-cdk/aws-s3": "^1.128.0",
-    "@aws-cdk/aws-ssm": "^1.128.0",
-    "@aws-cdk/core": "^1.128.0",
+    "@aws-cdk/aws-apigateway": "^1.129.0",
+    "@aws-cdk/aws-certificatemanager": "^1.129.0",
+    "@aws-cdk/aws-dynamodb": "^1.129.0",
+    "@aws-cdk/aws-iam": "^1.129.0",
+    "@aws-cdk/aws-lambda": "^1.129.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.129.0",
+    "@aws-cdk/aws-route53": "^1.129.0",
+    "@aws-cdk/aws-route53-targets": "^1.129.0",
+    "@aws-cdk/aws-s3": "^1.129.0",
+    "@aws-cdk/aws-sqs": "^1.129.0",
+    "@aws-cdk/aws-ssm": "^1.129.0",
+    "@aws-cdk/core": "^1.129.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
-    "@types/node": "^16.10.9",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@types/node": "^16.11.3",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "@vercel/ncc": "^0.31.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-github": "^4.3.0",
-    "eslint-plugin-jest": "^25.0.5",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.4",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.3.0",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.3.1",
     "typescript": "^4.4.4"
   }
 }
