--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Node.js setup
-        uses: actions/setup-node@3
+        uses: actions/setup-node@v3
         with:
           node-version: 16.x
 
