--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/local.ts",
-    "format": "prettier --write **/*.ts",
+    "format": "prettier --check --write ./**/*.{ts,js,json,md,yml,yaml}",
     "lint": "eslint ./ --fix",
     "test": "jest",
     "coverage": "jest --coverage",
@@ -17,14 +17,14 @@
     "destroy": "cdk destroy --profile movement-pass"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.204.0",
-    "@aws-sdk/client-s3": "^3.204.0",
-    "@aws-sdk/client-ssm": "^3.204.0",
-    "@aws-sdk/lib-dynamodb": "^3.204.0",
-    "@aws-sdk/s3-request-presigner": "^3.204.0",
+    "@aws-sdk/client-dynamodb": "^3.216.0",
+    "@aws-sdk/client-s3": "^3.216.0",
+    "@aws-sdk/client-ssm": "^3.216.0",
+    "@aws-sdk/lib-dynamodb": "^3.216.0",
+    "@aws-sdk/s3-request-presigner": "^3.216.0",
     "@vendia/serverless-express": "^4.10.1",
     "aws-lambda": "^1.0.7",
-    "aws-xray-sdk": "^3.3.8",
+    "aws-xray-sdk": "^3.4.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
@@ -36,35 +36,28 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@aws-cdk/aws-apigatewayv2": "^1.180.0",
-    "@aws-cdk/aws-apigatewayv2-integrations": "^1.180.0",
-    "@aws-cdk/aws-certificatemanager": "^1.180.0",
-    "@aws-cdk/aws-dynamodb": "^1.180.0",
-    "@aws-cdk/aws-iam": "^1.180.0",
-    "@aws-cdk/aws-lambda": "^1.180.0",
-    "@aws-cdk/aws-route53": "^1.180.0",
-    "@aws-cdk/aws-route53-targets": "^1.180.0",
-    "@aws-cdk/aws-s3": "^1.180.0",
-    "@aws-cdk/aws-ssm": "^1.180.0",
-    "@aws-cdk/core": "^1.180.0",
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.51.1-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.51.1-alpha.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
-    "@types/jest": "^29.2.2",
+    "@types/jest": "^29.2.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "@vercel/ncc": "^0.34.0",
-    "eslint": "^8.27.0",
+    "aws-cdk-lib": "^2.51.1",
+    "constructs": "^10.1.172",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-github": "^4.4.1",
-    "eslint-plugin-jest": "^27.1.4",
+    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   }
 }
