--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,11 @@ updates:
     schedule:
       interval: 'monthly'
     open-pull-requests-limit: 128
+    target-branch: lambda
 
   - package-ecosystem: 'npm'
     directory: '/'
     schedule:
       interval: 'monthly'
     open-pull-requests-limit: 128
+    target-branch: lambda
