--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "resolveJsonModule": true,
     "sourceMap": false,
     "strict": true,
+    "skipLibCheck": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "strictNullChecks": false,
