--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/client-dynamodb": "^3.326.0",
     "@aws-sdk/client-s3": "^3.326.0",
     "@aws-sdk/client-ssm": "^3.326.0",
+    "@aws-sdk/cloudfront-signer": "^3.316.0",
     "@aws-sdk/lib-dynamodb": "^3.326.0",
     "@aws-sdk/s3-request-presigner": "^3.326.0",
     "@vendia/serverless-express": "^4.10.1",
